--- a/biz-data/pom.xml
+++ b/biz-data/pom.xml
@@ -6,53 +6,43 @@
     <artifactId>biz-project</artifactId>
     <groupId>com.csdn</groupId>
     <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>biz-api</artifactId>
+  <artifactId>biz-data</artifactId>
 
   <dependencies>
-
-    <!-- Spring Web MVC -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <optional>true</optional>
+      <groupId>com.csdn</groupId>
+      <artifactId>biz-api</artifactId>
+      <version>${revision}</version>
     </dependency>
 
-    <!-- Spring Cloud OpenFeign -->
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
       <optional>true</optional>
     </dependency>
 
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.24</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
       <optional>true</optional>
     </dependency>
-
-    <!-- Dubbo -->
-    <dependency>
-      <groupId>org.apache.dubbo</groupId>
-      <artifactId>dubbo-common</artifactId>
-      <version>${dubbo.version}</version>
-      <optional>true</optional>
-    </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
-      <!-- deploy 到仓库 -->
+      <!-- 当前的模块跳过 deploy -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
+
     </plugins>
-
   </build>
-
 </project>
