--- a/biz-web/pom.xml
+++ b/biz-web/pom.xml
@@ -41,13 +41,15 @@
       <artifactId>micrometer-registry-prometheus</artifactId>
       <version>1.10.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+      <artifactId>spring-cloud-context</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
   </dependencies>
 
