--- a/biz-api/pom.xml
+++ b/biz-api/pom.xml
@@ -103,6 +103,12 @@
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-spring-boot2</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
