--- a/biz-web/src/main/resources/application.properties
+++ b/biz-web/src/main/resources/application.properties
@@ -7,9 +7,16 @@ spring.application.name = user-service
 #
 #management.endpoint.env.post.enabled = true
 #
-#server.port = 8080
+server.port = 8080
 #
 ## Eureka \u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone = http://127.0.0.1:12345/eureka
 eureka.client.instanceInfoReplicationIntervalSeconds = 10
 
+#management.server.port = 8081
+management.endpoints.web.exposure.include = *
+management.endpoint.env.post.enabled = true
+#management.endpoints.web.basePath = /management
+management.endpoints.jmx.exposure.include = *
+
+spring.main.allow-bean-definition-overriding=true
