--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
         <dubbo.version>2.7.8</dubbo.version>
         <resilience4j.version>1.7.0</resilience4j.version>
+        <mybatis.version>3.5.9</mybatis.version>
+        <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -75,6 +77,19 @@
                 <artifactId>resilience4j-spring-boot2</artifactId>
                 <version>${resilience4j.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
